[metadata]
name = squidreport
author = See AUTHORS
author-email = contact@adimian.com
summary = Zeek logs analyzer
description-file = README.md
classifier =
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
[files]
packages =
    squidreport
[wheel]
universal = 1
[options.entry_points]
console_scripts =
    squidreport = squidreport.__main__:main
[flake8]
max-line-length = 80
ignore = E501,W503,E402,W291,F401,C901
[tool:pytest]
norecursedirs = docs *.egg-info .git .eggs
addopts = -p no:warnings
